[package]
name = "grpm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
curl = "0.4.37"
futures = "0.3.15"
itertools = "0.10.0"
octocrab = "0.9.0"
pico-args = "0.4.1"
regex = "1.5.4"
tokio = { version = "1.6.0", features = ["full"] }

[dependencies.tui]
version = "0.15.0"
features = ["crossterm"]
